test/errors/293-fatalerror/528.tex
% tex -interaction=nonstopmode
%% 528 => "*** (job aborted, no legal \end found)"

% nothing

%> *** (job aborted, no legal \end found)